# ahadiff

./: .gitattributes  .gitignore  AGENTS.md  AhaDiff Warm v5.html  AhaDiff Warm v6.html  AhaDiff-Blueprint.html  AhaDiff-Competitors-Research.html  CLAUDE.md  CONVENTIONS.md  LICENSE  R0-feature-matrix.md  README.en.md  README.md  README.zh.md  RELEASING.md  _final_plan.md  blueprint-snapshot.md  pyproject.toml  result.json  snapshot-01-dashboard.md
.claude/: index.json
.claude/review-reports/: cross-review-2026-04-23.md  learnability-claims-extract-cross-review-2026-04-23.md  stage2-task7-cross-review.md  stage6-tasks-14.5-18-19-20-i18n0-cross-review-2026-04-24.md  task15-review-cross-review-2026-04-24.md  task16-cross-review-2026-04-24.md  task6-cross-review-2026-04-22.md  task8-claims-cross-review-2026-04-23.md  task9-11-12-harden-review-2026-04-23.md
.claude/team-plan/: ahadiff-agent-rules-registry.md  ahadiff-ast-lsp-research.md  ahadiff-borrow-points-decision.md  ahadiff-competitors-research.md  ahadiff-data-scope-architecture.md  ahadiff-diff-input-expansion.md  ahadiff-engineering-kickoff.md  ahadiff-faq-research.md  ahadiff-fsrs-decision.md  ahadiff-full-review-v0.1-v1.0.md  ahadiff-graphify-integration.md  ahadiff-round10-cross-review.md  ahadiff-round9-ultimate-review.md  ahadiff-ultimate-review-research.md  ahadiff-v01-claude-review.json  ahadiff-v01-comprehensive-evaluation-research.md  ahadiff-v01-comprehensive-review-research.md  ahadiff-v01-cross-review-report.md  ahadiff-v01-diff-input-expansion.md  ahadiff-v01-final-deep-review.md  ahadiff-v01-implementation-plan.md  ahadiff-v01-kickoff.md  ahadiff-v01-revision.md  ahadiff-v01-round3-readiness-research.md  ahadiff-v01-round4-final-review.md  ahadiff-v01-round6-cross-review.md  ahadiff-v01-stages-4-9.md  ahadiff-v01-team-review-research.md  borrow-points-verification-report.md  closure-checklist-29.md  codex-review-part-g.md  corner-cases-closure-8.md  review-graphify-integration.md  rfc-apkg-stable-guid.md  rfc-learning-loop.md  rfc-local-preview-export.md  rfc-maintenance-loop.md  rfc-mcp-ask-lesson.md  round10-claude-deep-audit.md  v1.0-fullscope-execution-plan.md  (+1 more)
.github/workflows/: ci.yml  frontend-ci.yml  nightly-eval.yml  pages.yml  release.yml
benchmarks/: manifest.json
benchmarks/graphify/: bench_graphify.py  gen_large_graph.py  large_graph.json  xlarge_graph.json
benchmarks/results/: baseline_20260428.json  graphify_bench.json
benchmarks/scripts/: bench_api_latency.py  bench_bundle_size.sh  bench_cli_startup.py  bench_diff_parse.py  bench_graphify.py  bench_serve_read_routes.py  bench_sqlite_queries.py  run_all.sh
doc/: AhaDiff_frontend_design_v1.1_revised.md  CLAUDE.md  COMPREHENSIVE-EVALUATION-REPORT.md  FRONTEND_GAP_REPORT.md  R4-frontend-crossplatform-audit.md  SOURCE-CODE-VERIFICATION-REPORT.md  ahadiff 最终完整方案：Vibe Coding 后的“学回来”本地工具.md  ahadiff设计思路.md  auth-token-threat-model.md  competitive-analysis-2026-04.md  comprehensive-research-report-2026-05-12.md  concepts-cutover-rehearsal.md  contract-freeze.md  cross-platform-audit.md  diff-capture-feasibility.json  graphify-performance-evidence.md  phase1_gap_analysis.md  release-governance.md  task16-deep-review.md  trending-ai-projects-research-2026.md  v1-R4-backend-verification-report.md  v1-crossplatform-audit-R2.md  v1-crossplatform-security-audit.md  v1-frontend-architecture-research.md  v1-graphify-compatibility-matrix.md  v1-performance-baseline-R5.md  v1-serve-api-live-test-report.md  v1.0-backend-architecture-research.md  v1.0-backend-signoff-8C.md  v6-alignment-gap-analysis.md  知返ahadiff改名后的后续方案.md  知返设计坐标.md
doc/decisions/: competitive-research-full.md  competitive-research.md  h1-h2-h5-plan.md
doc/rfcs/: rfc-001-v1-contract-extension.md
docs/: EVAL_SCORING_ENHANCEMENT_PLAN.md  EVAL_SCORING_ENHANCEMENT_REVIEW.md  USER_GUIDE.en.html  USER_GUIDE.zh.html  VALIDATION_AUDIT.zh.md  index.html
docs/plans/: guidance-overhaul-plan.md
docs/video/: .gitignore  README.md  package.json  pnpm-lock.yaml
plan/: v0.2-v6-alignment-research-prompt.md  v1.0-codex-audit-report.md  v1.0-codex-full-audit-prompt.md  v1.0-deep-research-prompt.md  v1.0-research-v2.md  v1.0-research.md
prompts/: claim_extract.md  eval_judge.md  improve_program.md  lesson_compact.md  lesson_hint.md  misconception_card.md  quiz_generate.md  spec_semantic_alignment.md
scripts/: check_wheel_webui.py  curate_registry.py  diff_coverage_replay_calibration.py
src/ahadiff/: __init__.py  cli.py
tests/eval/: test_benchmark.py  test_judge_stability.py
tests/integration/: test_auto_capture.py  test_learn_pipeline.py
tests/live/: test_llm_judge_live.py  test_structured_output_smoke.py
tests/unit/: conftest.py  test_allowlist.py  test_apkg_export.py  test_async_dao_threadpool.py  test_atomic_replace.py  test_benchmark_scripts.py  test_challenge_state.py  test_check_wheel_webui.py  test_claim_classify.py  test_claim_extract.py  test_claim_verify.py  test_cli.py  test_cli_construction.py  test_concepts.py  test_concepts_db.py  test_concepts_lint.py  test_concepts_rollback.py  test_contracts.py  test_core_utils.py  test_cross_platform_static.py  test_diff_coverage_replay_calibration.py  test_diff_parser.py  test_distractor_gate.py  test_entailment.py  test_entailment_report.py  test_entailment_shadow.py  test_evaluator.py  test_export_preview.py  test_gate3_hardening.py  test_gate4_hardening.py  test_gates.py  test_git_capture.py  test_github_action.py  test_graphify.py  test_graphify_linker.py  test_graphify_matcher.py  test_graphify_search.py  test_graphify_slicer.py  test_helpfulness.py  test_hooks_schema.py  (+59 more)
ui/: AhaDiff Warm v4.html  CLAUDE.md  ahadiff-warm-v2.html  ahadiff-warm-v3 (1).html  ahadiff-warm.html
viewer/: .gitignore  AUDIT-REPORT.md  AUDIT_V6_FIDELITY.md  V6_DEEP_ANALYSIS.md  index.html  package.json  playwright.config.ts  playwright.real-serve.config.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts  vitest.config.ts
viewer/public/: manifest.json  registerSW.js
viewer/src/: App.tsx  main.tsx
(+571 files in other folders)
