[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "ahadiff"
version = "1.1.0a0"
description = "Local-first verified diff learning layer."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fsrs>=6.3.1,<7",
  "httpx>=0.28,<1",
  "jinja2>=3.1,<4",
  "mcp>=1.0,<2",
  "portalocker>=3.1,<4",
  "pydantic>=2.11,<3",
  "rich>=14,<15",
  "starlette>=0.49,<1",
  "typer>=0.16,<1",
  "uvicorn>=0.38,<1",
]

[project.scripts]
ahadiff = "ahadiff.cli:main"

[project.optional-dependencies]
anki = [
  "genanki>=0.13,<1",
]
optimizer = [
  "fsrs[optimizer]>=6.3.1,<7",
]
watchdog = [
  "watchdog>=6,<7",
]
tree-sitter = [
  "tree-sitter>=0.24,<1",
  "tree-sitter-c-sharp>=0.23,<1",
  "tree-sitter-go>=0.25,<1",
  "tree-sitter-javascript>=0.25,<1",
  "tree-sitter-java>=0.23,<1",
  "tree-sitter-php>=0.24,<1",
  "tree-sitter-rust>=0.24,<1",
  "tree-sitter-ruby>=0.23,<1",
  "tree-sitter-typescript>=0.23,<1",
]

[dependency-groups]
dev = [
  "pyright>=1.1.400,<2",
  "pytest>=8.4,<9",
  "pytest-cov>=7,<8",
  "pyyaml>=6,<7",
  "ruff>=0.12,<0.13",
  "tree-sitter>=0.24,<1",
  "tree-sitter-c-sharp>=0.23,<1",
  "tree-sitter-go>=0.25,<1",
  "tree-sitter-javascript>=0.25,<1",
  "tree-sitter-java>=0.23,<1",
  "tree-sitter-php>=0.24,<1",
  "tree-sitter-rust>=0.24,<1",
  "tree-sitter-ruby>=0.23,<1",
  "tree-sitter-typescript>=0.23,<1",
  "watchdog>=6,<7",
]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "pinned: deterministic pinned integration fixtures",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "C4", "SIM", "RET", "PTH", "TC", "FA"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
reportMissingTypeStubs = false
typeCheckingMode = "strict"
venv = ".venv"
venvPath = "."
